style.css
@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;500;700&display=swap');
:root {
    --primary-color: hsl(233, 54%, 16%);
    --text-color: hsl(232, 10%, 56%);
    --white-color: hsl(0, 0%, 100%);
    --primary-bg-color: linear-gradient(to bottom, hsl(13, 100%, 64%), hsl(322, 87%, 55%));
    --secondary-bg-color: linear-gradient(to bottom, hsl(237, 100%, 64%), hsl(322, 87%, 55%));
    --secondary-bg-color-hover: linear-gradient(to bottom, hsla(237, 100%, 64%, 0.5), hsla(322, 87%, 55%, 0.5));
    --primary-btn-hover-color: hsl(234, 25%, 52%);
    --grid-bg-color: hsl(240, 100%, 99%);
    --card-bg-color: hsl(0, 0%, 100%);
    --card-link-text-color: hsl(341, 92%, 62%);
    --card-link-text-color-hover: hsl(341, 100%, 83%);
    --footer-bg-color-hover: linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),
                            linear-gradient(180deg, #4851FF -54.32%, #F02AA6 100%)
}

*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-size: 62.5%;
}

body {
    font-family: "Plus Jakarta Sans", sans-serif;
    overflow-x: hidden;
}

a {
    color: var(--white-color);
    text-decoration: none;
    font-weight: 700;
}

/* Utilities */
.btn {
    font-size: 1.7rem;
    padding: 1rem 2.4rem;
    border-radius: 5rem;
}

.btn-primary {
    background-color: var(--primary-color);
    transition: all 200ms;
    position: relative;
    z-index: 1;
}

.btn-secondary {
    background: var(--secondary-bg-color);
    transition: all 200ms;
}

.btn-primary:hover {
    background-color: var(--primary-btn-hover-color);
}

.btn-gradient {
    background: var(--primary-bg-color);
    padding: 1.5rem 3.8rem;
    transition: opacity 200ms;
}

.btn-gradient:hover {
    opacity: 0.5;
}

/* Header Section */
.header {
    padding: 1.6rem;
    position: relative;
    overflow-x: hidden;
}

.hero-nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 3.8rem;
}

.hero-content h1 {
    font-size: 4rem;
    font-weight: 700;
    color: var(--primary-color);
    margin-bottom: 2.6rem;
    max-width: 35rem;
}

.hero-content p {
    font-size: 1.5rem;
    color: var(--text-color);
    margin-bottom: 2.4rem;
}

.hero-content a {
    display: inline-block;
    margin-bottom: 4rem;
}

.hero-image {
    width: 100%;
    text-align: center;
    overflow-x: hidden;
}

.hero-image img {
    max-width: 100%;
    height: auto;
}

/* Main section */
.grid {
    padding: 0 1.6rem 8rem;
    display: grid;
    background-color: var(--grid-bg-color);
    row-gap: 4rem;
}

.grid h2 {
    font-size: 2.2rem;
    color: var(--white-color);
    padding: 2.4rem 2.8rem 3.2rem;
    border-radius: 1rem;
    background: var(--primary-bg-color);
    font-weight: 700;
}

.grid-card {
    background-color: var(--card-bg-color);
    padding: 0 2.8rem;
    border-radius: 1rem;
}

.grid-card img {
    width: 5.6rem;
    height: 5.6rem;
    transform: translateY(-2.4rem);
}

.grid-card h3 {
    font-size: 1.8rem;
    margin-top: -2rem;
}

.grid-card p {
    font-size: 1.4rem;
    color: var(--text-color);
    margin-top: 1.6rem;
    margin-bottom: 2.4rem;
}

.grid-card a {
    font-size: 1.6rem;
    color: var(--card-link-text-color);
    display: inline-block;
    margin-bottom: 3.2rem;
    transition: color 300ms;
}

.grid-card a:hover {
    color: var(--card-link-text-color-hover);
}

footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--primary-color);
    height: 12rem;
    padding: 0 1.6rem;
}

footer a.btn {
    transition: background 3000ms;
    position: relative;
    z-index: 1;
}

footer a.btn::after {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    opacity: 0;
    z-index: -1;
    border-radius: 5rem;
    background: var(--footer-bg-color-hover);
    transition: all 300ms;
}

footer a.btn:hover::after {
    opacity: 1;
}

/* Tablets section */
@media only screen and (min-width: 768px) and (orientation: landscape) {
    html {
        font-size: 70.5%;
    }

    body {
        overflow-x: hidden;
        position: relative;
    }
    
    .header {
        padding: 2.4rem 4rem;
    }

    .hero-content {
        max-width: 40rem;
        margin-bottom: 10rem;
    }

    .hero-nav {
        margin-bottom:10rem;
    }

    .hero-image {
        width: 64rem;
        position: absolute;
        top: -7rem;
        right: -30rem;
    }

    .hero-image img {
        overflow-x: hidden;
        width: 100%;
        max-height: 100%;
        object-fit: cover;
    }

    .grid {
        grid-template-columns: repeat(2, 1fr);
        padding: 2.4rem 2.4rem 8.6rem;
        gap: 3.2rem 1rem;
    }

    .grid-card {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }

    footer {
        padding-left: 2.4rem;
        padding-right: 2.4rem;
    }
}

/* For laptops screens */
@media only screen and (min-width: 1200px) {
    html {
        font-size: 75%;
    }

    .header,
    .grid, 
    footer {
        padding: 2.4rem 16.5rem;
    }

    .hero-nav {
        margin-bottom: 12rem;
    }

    .hero-content {
        margin-bottom: 5rem;
    }

    .hero-image {
        top: -7rem;
        right: -18rem;
    }

    .grid {
        grid-template-columns: repeat(3, 1fr);
        gap: 5.6rem 3rem;
        padding-bottom: 14rem;
    }
}

